--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
     <string name="app_name">EverydayEnglish</string>
+
+    <string name="menu_tests">Tests</string>
+    <string name="menu_bookmarks">Bookmarks</string>
+    <string name="menu_settings">Settings</string>
+    <string name="menu_share">Share</string>
+
+    <string name="action_search">Search</string>
+    <string name="share_title_nav">Share with friends</string>
+    <string name="navigation_drawer_open">opened</string>
+    <string name="navigation_drawer_close">closed</string>
+    <string name="radio_all">all</string>
+    <string name="radio_new">new</string>
+    <string name="radio_solved">solved</string>
 </resources>
